# google-translate-cli

./: .cirrus.yml  .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp  mingw-w64-toolchain.cmake  release.sh
